fix: correct todo card alignment

--- a/src/style.css
+++ b/src/style.css
@@ -197,8 +197,12 @@ select {
 
 .todo-card-title {
     font-size: 2rem;
+    display: flex;
+    align-items: center;
 }
 
-.todoCardDate {
-    text-align: end;
+.todo-card-date {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
